fix to make scrolling work on ios devices

--- a/app/css/custom.css
+++ b/app/css/custom.css
@@ -3,6 +3,12 @@ body {
 	padding-top: 130px;
 }
 
+#skrollr-body {
+  float: left;
+  width: 100%;
+  height: 100%;
+}
+
 header {
 	background-color: black;
 	font-family: "futura-pt";
